# dot

./: .gitconfig  .gitignore  .zshrc  README.md
.config/: brave-flags.conf  starship.toml
.config/atuin/: config.toml
.config/atuin/themes/: tokyonight-night.toml
.config/brix/avr/: init.brix.yml
.config/brix/avr/project/: .clang-format  .clangd  .gitignore  avr-gcc.toolchain.cmake
.config/brix/avr/project/inc/: build.h  main.h  utils.h
.config/brix/avr/project/src/: build.c.i  main.c
.config/brix/avr/templates/: CMakeLists.txt.hbs
.config/brix/stm32/: init.brix.yml
.config/brix/stm32/project/: .clangd  CMakeLists.txt  Makefile
.config/ghostty/: config
.config/hypr/: hyprland.conf  hyprland.lua  hyprlock.conf  hyprpaper.conf  inputs.conf  inputs.lua  keybindings.conf  keybindings.lua  layerrules.conf  layerrules.lua  windowrules.conf  windowrules.lua
.config/hypr/dms/: colors.lua  cursor.conf  cursor.lua  layout.lua
.config/lazydocker/: config.yml
.config/lazygit/: config.yml
.config/nvim/: .luarc.json  init.lua  lazy-lock.json
.config/nvim/after/lsp/: clangd.lua  cssls.lua  emmet_ls.lua  eslint.lua  gopls.lua  intelephense.lua  lua_ls.lua  pylsp.lua  taplo.lua  yamlls.lua
.config/nvim/after/queries/blade/: injections.scm
.config/nvim/after/queries/markdown/: injections.scm
.config/nvim/lua/samad/: lazy.lua  utils.lua
.config/nvim/lua/samad/configs/: lsp.lua
.config/nvim/lua/samad/configs/heirline/: colors.lua
.config/nvim/lua/samad/configs/lsp/: handlers.lua  init.lua  util.lua
.config/nvim/lua/samad/configs/names/: formatters.lua  linters.lua  lsp.lua
.config/nvim/lua/samad/configs/statusline/: diagnostics.lua  filename.lua  format.lua  git.lua  init.lua  lazy.lua  linters.lua  lsp.lua  ruler.lua  session.lua  treesitter.lua  venv.lua  vimode.lua
.config/nvim/lua/samad/configs/tabline/: bufferline.lua  init.lua  offset.lua
.config/nvim/lua/samad/core/: filetypes.lua  init.lua  keymaps.lua  options.lua
.config/nvim/lua/samad/plugins/: alpha-nvim.lua  auto-session.lua  blink-cmp.lua  bufdelete.lua  catppuccin.lua  codeium.lua  colorizer.lua  comment.lua  conform.lua  crates.lua  format.lua  github-theme.lua  gitsigns.lua  harpoon.lua  heirline.lua  indent-blankline.lua  init.lua  lazygit.lua  lint.lua  markdown.lua  neo-tree.lua  neogen.lua  nvim-autopairs.lua  nvim-cmp.lua  nvim-devdocs.lua  nvim-notify.lua  nvim-treesitter-modules.lua  nvim-treesitter-text-objects.lua  nvim-treesitter.lua  nvim-ts-autotag.lua  nvim-ufo.lua  nvim-web-devicons.lua  smart-splits.lua  telescope.lua  todo-comments.lua  tokyonight.lua  trouble.lua
.config/nvim/lua/samad/plugins/dap/: nvim-dap.lua
.config/nvim/lua/samad/plugins/lsp/: clangd_extensions.lua  dap.lua  fidget.lua  gopher.lua  lsp-lens.lua  lsp-signature.lua  lsp_lines.lua  lspconfig.lua  (+7 more)
.config/systemd/user/: atuin.service  jiotv.service
.config/tmux/: tmux.conf
.config/waybar/: config  style.css
.config/wezterm/: wezterm.lua
.config/wlogout/: layout  style.css
.config/yamlfmt/: yamlfmt.yaml
.config/yamllint/: config
.config/yazi/: yazi.toml
.config/zsh/: bindings.zsh  env.zsh  history.zsh  init.zsh
.config/zsh/func/: _mago  _mbmd  _uv
.config/zsh/plugins/archlinux/: archlinux.plugin.zsh
.config/zsh/plugins/bob/: bob.plugin.zsh
.config/zsh/plugins/composer/: composer.plugin.zsh
.config/zsh/plugins/docker/: docker.plugin.zsh
.config/zsh/plugins/fnm/: fnm.plugin.zsh
.config/zsh/plugins/fzf/: fzf.plugin.zsh
.config/zsh/plugins/ghostty/: ghostty.plugin.zsh
.config/zsh/plugins/git/: git.plugin.zsh
.config/zsh/plugins/gup/: gup.plugin.zsh
.config/zsh/plugins/myconf/: myconf.plugin.zsh
.config/zsh/plugins/nvim/: nvim.plugin.zsh
.config/zsh/plugins/nvm/: nvm.plugin.zsh
.config/zsh/plugins/pnpm/: pnpm.plugin.zsh
.config/zsh/plugins/rbw/: rbw.plugin.zsh
.config/zsh/plugins/tmux-smart-sessions/: tmux-smart-sessions.plugin.zsh
.config/zsh/plugins/utils/: utils.plugin.zsh
.config/zsh/plugins/wezterm/: wezterm.plugin.zsh
.config/zsh/plugins/zoxide/: zoxide.plugin.zsh
